# redscript-ide

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release.yml
src/: buffers.rs  display.rs  error.rs  main.rs  query.rs  server.rs  source_links.rs  util.rs
