[package]
name = "redscript-ide"
version = "0.1.9"
rust-version = "1.75"
edition = "2021"
license = "MIT"

[dependencies]
lspower = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
ropey = "1"
toml = "0.8"
intaglio = { version = "1", features = ["path"] }

[dependencies.redscript]
git = "https://github.com/jac3km4/redscript"
default-features = false
features = ["arc"]
rev = "8224342"

[dependencies.redscript-compiler]
git = "https://github.com/jac3km4/redscript"
rev = "8224342"

[lints.rust]
warnings = "deny"
future-incompatible = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"

[lints.clippy]
all = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"
single_match_else = "deny"
redundant_closure_for_method_calls = "deny"
cloned_instead_of_copied = "deny"
redundant_else = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
type_repetition_in_bounds = "deny"
equatable_if_let = "deny"
implicit_clone = "deny"
default_trait_access = "deny"
explicit_deref_methods = "deny"
explicit_iter_loop = "deny"
inefficient_to_string = "deny"
match_bool = "deny"

[workspace.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
publish = false

[profile.release]
lto = "thin"
