[package]
name = "redscript-ide"
version = "0.1.39"
rust-version = "1.75"
edition = "2021"
license = "MIT"

[dependencies]
lspower = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
ropey = "1"
toml = "0.8"
intaglio = { version = "1", features = ["path"] }

[dependencies.redscript]
git = "https://github.com/jac3km4/redscript"
default-features = false
features = ["arc"]
rev = "e6ede96"

[dependencies.redscript-compiler]
git = "https://github.com/jac3km4/redscript"
rev = "e6ede96"

[dependencies.redscript-ast]
git = "https://github.com/jac3km4/redscript-syntax"
rev = "9690bc2"

[dependencies.redscript-parser]
git = "https://github.com/jac3km4/redscript-syntax"
rev = "9690bc2"

[dependencies.redscript-formatter]
git = "https://github.com/jac3km4/redscript-syntax"
rev = "9690bc2"

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
redundant_else = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
type_repetition_in_bounds = "warn"
equatable_if_let = "warn"
implicit_clone = "warn"
default_trait_access = "warn"
explicit_deref_methods = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
match_bool = "warn"

[workspace.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
publish = false

[profile.release]
lto = true
strip = true
codegen-units = 1
