[package]
name = "redscript-ide"
version = "0.2.0-preview1"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ouroboros = "0.18"
urlencoding = "2"
ropey = "1"
crossbeam-channel = "0.5"
vmap = "0.6"
mimalloc = "0.1"
lsp-server = "0.7"
lsp-types = "0.97"

[dependencies.redscript-parser]
git = "https://github.com/jac3km4/redscript"
rev = "v1.0.0-preview4"

[dependencies.redscript-formatter]
git = "https://github.com/jac3km4/redscript"
rev = "v1.0.0-preview4"

[dependencies.redscript-compiler-api]
git = "https://github.com/jac3km4/redscript"
rev = "v1.0.0-preview4"
features = ["walkdir"]

[patch.crates-io]
stable_deref_trait = { git = "https://github.com/Storyyeller/stable_deref_trait", rev = "59a35e0" }

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
redundant_else = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
type_repetition_in_bounds = "warn"
equatable_if_let = "warn"
implicit_clone = "warn"
default_trait_access = "warn"
explicit_deref_methods = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
match_bool = "warn"

[workspace.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
publish = false

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
